fix json test and json service